// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`React Basic 1`] = `
"import { useState } from \\"@jsx-lite/react\\";

export default function MyComponent(props) {
  const state = useState(() => ({ name: \\"Steve\\" }));

  return (
    <>
      <div>
        <input
          value={\\"state.name\\"}
          onChange={(event) => (state.name = event.target.value)}
        />
        Hello! I can run in React, Vue, Solid, or Liquid!
      </div>
    </>
  );
}
"
`;

exports[`React Input block 1`] = `
"import { useState } from \\"@jsx-lite/react\\";

import { Builder } from \\"@builder.io/sdk\\";

export interface FormInputProps {
  type?: string;
  attributes?: any;
  name?: string;
  value?: string;
  placeholder?: string;
  defaultValue?: string;
  required?: boolean;
}

export default function MyComponent(props) {
  const state = useState(() => ({}));

  return (
    <>
      <input
        {...props.attributes}
        key={
          \\"Builder.isEditing && props.defaultValue ? props.defaultValue : 'default-key'\\"
        }
        placeholder={\\"props.placeholder\\"}
        type={\\"props.type\\"}
        name={\\"props.name\\"}
        value={\\"props.value\\"}
        defaultValue={\\"props.defaultValue\\"}
        required={\\"props.required\\"}
      />
    </>
  );
}
"
`;

exports[`React Select block 1`] = `
"import { useState } from \\"@jsx-lite/react\\";

import { Builder } from \\"@builder.io/sdk\\";

export interface FormSelectProps {
  options?: {
    name?: string,
    value: string,
  }[];
  attributes?: any;
  name?: string;
  value?: string;
  defaultValue?: string;
}

export default function MyComponent(props) {
  const state = useState(() => ({}));

  return (
    <>
      <select
        {...props.attributes}
        value={\\"props.value\\"}
        key={
          \\"Builder.isEditing && props.defaultValue ? props.defaultValue : 'default-key'\\"
        }
        defaultValue={\\"props.defaultValue\\"}
        name={\\"props.name\\"}
      >
        {props.options.map((option) => (
          <option value={\\"option.value\\"}>{option.name || option.value}</option>
        ))}
      </select>
    </>
  );
}
"
`;

exports[`React Submit button block 1`] = `
"import { useState } from \\"@jsx-lite/react\\";

export interface ButtonProps {
  attributes?: any;
  text?: string;
}

export default function MyComponent(props) {
  const state = useState(() => ({}));

  return (
    <>
      <button {...props.attributes} type=\\"submit\\">
        {props.text}
      </button>
    </>
  );
}
"
`;
